Added different voice options for each synth

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1>Midi to Chiptune</h1>
     <input type='file' id='file-selector' accept=".mid">
     <button onclick="playSound()">Play</button>
+    <script src="options.js"></script>
     <script src="midi.js"></script>
     <script src="index.js"></script>
 </body>
