--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.13/Tone.js"></script> -->
-    <script src="https://rupel190.github.io/Tone.js/Tone.js"></script> //displays 'dev' as version
+    <!-- displays 'dev' as version -->
+    <script src="https://rupel190.github.io/Tone.js/Tone.js"></script> 
     <script src="https://unpkg.com/@tonejs/midi@2.0.27/build/Midi.js"></script>
 </head>
 
