Small adjustments; Recorder reinits after stopping;

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Midi to Chiptune</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.13/Tone.js"></script> -->
-    <!-- displays 'dev' as version -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.13/Tone.js"></script>
+    <!-- Only necessary when using recorder.pause() to allow resuming -->
     <script src="https://rupel190.github.io/Tone.js/Tone.js"></script> 
     <script src="https://unpkg.com/@tonejs/midi@2.0.27/build/Midi.js"></script>
 </head>
